[package]
name = "lumpy-leandoc"
version = "0.1.0"
authors = ["matt rice <ratmice@gmail.com>"]
edition = "2018"

[dependencies]
failure = "^0.1"
walkdir = "^2.2"
olean-rs = { git="https://github.com/ratmice/olean-rs.git" }
pulldown-cmark = "^0.5"
tectonic = "^0.1"
# Feature gate this to bring in rayon or rayon_lgos.
#rayon_logs = "0.1.2"
rayon = "^1.1"
im = "^13.0"
crowbook-text-processing = "^0.2"
xi-rope = { git="https://github.com/xi-editor/xi-editor.git"}
syntect = "^3.2"
logging_timer = "^0.2"
log = "^0.4"
env_logger = "^0.6"
toml = "0.5"
serde_derive = "1.0"
serde = "1.0"
path-slash = "^0.1"
